--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,10 +5,10 @@ EditorStartupMap=/Game/Levels/Default.Default
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
+TwoPlayerSplitscreenLayout=Vertical
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
-bOffsetPlayerGamepadIds=False
+bOffsetPlayerGamepadIds=True
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Levels/Default.Default
 ServerDefaultMap=/Engine/Maps/Entry.Entry
@@ -70,6 +70,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/Game")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Game")
+GameViewportClientClassName=/Script/Game.FixGameViewportClient
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
