Teleport added, as well as Initial Spawn Room.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bOffsetPlayerGamepadIds=True
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Levels/Default.Default
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
+GlobalDefaultGameMode=/Script/Game.MyGameMode
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
