--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/Default.Default
+EditorStartupMap=/Game/Levels/Dev-Level.Dev-Level
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -10,9 +10,9 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=True
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Levels/Default.Default
+GameDefaultMap=/Game/Levels/Dev-Level.Dev-Level
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Game.MyGameMode
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
